Fixed the contrast errors

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,5 +1,5 @@
 // @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-$primary-color: #4c96d7;
+$primary-color: #055499;
 html {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
@@ -51,7 +51,7 @@ html {
       display: flex;
       justify-content: space-around;
       align-items: center;
-      background-color: #242332;
+      background-color: #121118;
 
       .list-item {
         list-style: none;
@@ -99,11 +99,17 @@ html {
           padding-top: 20rem;
         }
       }
+      .own-today {
+        background-color: $primary-color;
+        color: #fff;
+        padding: 1rem 2rem;
+        font-size: 2rem;
+      }
       .list {
         padding: 0;
         margin: 0.2rem;
         list-style: none;
-        padding-bottom: 2rem;
+        padding-bottom: 3rem;
         font-size: 1.75rem;
 
         .item {
